<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumno.clase2.MainActivity">

    <!--
    Wrap content:
    Match parent:
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtView1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/IntroduceName"/>

        <EditText
            android:id="@+id/edtNombre"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtView2"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/IntroduceSurname"/>

        <EditText
            android:id="@+id/edtApellido"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/IntroduceDni"/>

        <EditText
            android:id="@+id/edtDni"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
           android:id="@+id/txtView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/IntroduceSex"
        android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioGroup
                    android:id="@+id/radioGroupSex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/rbtHombre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/SexMale"/>

                    <RadioButton
                        android:id="@+id/rbtMujer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/SexFemale"/>
                </RadioGroup>
            </LinearLayout>
    </LinearLayout>


        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/save"
            android:text="@string/Save"
            android:layout_gravity="center_horizontal|center_vertical"/>



</LinearLayout>